Bug 1423528 - Recompute shadow visible rect for ContainerLayerMLGPU in case it has been changed by async animations. r=mstange